<resources>
    <string name="app_name">pr2v6</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Главная</string>
    <string name="menu_profile">Профиль</string>
    <string name="menu_settings">Настройки</string>
    <string name="menu_shoppingCart">Корзина</string>

    <!-- Login activity -->
    <string name="login_activity_title">Авторизация</string>
    <string name="password_hint">Пароль</string>
    <string name="login_hint">Логин</string>
    <string name="login_button">Войти</string>

    <!-- Profile    -->
    <string name="ExitProfile_str">Выйти</string>
    <string name="userName_str">Имя пользователя</string>
    <string name="userEmail_str">Адрес электронной почты</string>
    <string name="userCity_str">Город проживания</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="visibility_header">Анонимность</string>
    <string name="notifications_header">Уведомления</string>

    <!-- visibility Preferences -->
    <string name="visibility_title">Показывать врачам имя</string>
    <!-- notifications Preferences -->
    <string name="notif_send_title">Разрешить уведомления</string>
    <string name="advertisment_notif_title">Рекламных сообщения</string>
    <string name="attachment_summary_on">Периодически отправляются рекламные предложения
    </string>
    <string name="attachment_summary_off">Рекламные предложения не отправляются</string>
    <string name="doctorNameHint">Врач</string>
    <string name="doctorPriceHint">Консультация</string>
    <string name="doctorRatingHint">Рейтинг</string>
    <string name="doctorSpecHint">Специализация</string>

    <string name="reviewRatingHint">Оценка</string>
    <string name="reviewReviewHint">Отзыв</string>
    <string name="ReviewsTitle">Отзывы</string>

    <string name="timestampHint">Время консультации</string>
    <string name="SignUpButtonString">Записаться</string>
    <string name="AntiSignUpButtonString">Отменить</string>
    <string name="ConstultationHeader">Записи на консультацию</string>
    <string name="ShoppingCart">Shopping Cart</string>
    <string name="consultationDoctorNameHint">Имя врача</string>
    <string name="shoppingCartBuy">Оформить</string>
    <string name="DeclineButtonString">Отменить</string>
    <string name="consultationCostHint">Стоимость консультации</string>
</resources>