<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".com.example.pr2v6.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:minHeight="100dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/loginName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|top"
                android:gravity="center"
                android:text="@string/login_activity_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/actualInputsLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editTextTextEmailAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="true"
                android:ems="10"
                android:hint="@string/login_hint"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:textColorHint="@color/hint_text" />

            <EditText
                android:id="@+id/editTextTextPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="true"
                android:ems="10"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textColorHint="@color/hint_text" />

            <Button
                android:id="@+id/buttonLoginToMain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal|center_vertical"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/login_button" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>