<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/consultationLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/hint_text"
    android:baselineAligned="false"
    android:orientation="horizontal"
    android:padding="16dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@color/white"
            android:orientation="vertical">

            <TextView
                android:id="@+id/consultationDoctorNameHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/consultationDoctorNameHint"
                android:textColor="@color/hint_text" />

            <TextView
                android:id="@+id/consultationDoctorNameHeader"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="left|center_vertical"
                android:layout_marginBottom="0dp"
                android:layout_weight="1"
                android:gravity="left|center_vertical"
                android:textAlignment="viewStart"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/timestampHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/timestampHint"
                android:textColor="@color/hint_text" />

            <TextView
                android:id="@+id/timestampHeader"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="left|center_vertical"
                android:layout_marginBottom="0dp"
                android:layout_weight="1"
                android:gravity="left|center_vertical"
                android:textAlignment="viewStart"
                android:textSize="20sp" />

        </LinearLayout>

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/SignUpButtonString" />

    </LinearLayout>

</LinearLayout>