<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/padding"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:padding="16dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imageViewInDoctorFragment"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            app:shapeAppearanceOverlay="@style/circleImageView"
            app:strokeWidth="1dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/doctorFragmentNameHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/doctorNameHint"
                android:textColor="@color/hint_text" />

            <TextView
                android:id="@+id/doctorFragmentName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/doctorFragmentSpecHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/doctorSpecHint"
                android:textColor="@color/hint_text" />

            <TextView
                android:id="@+id/doctorFragmentSpecialization"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/SecondLinearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/doctorFragmentPriceHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/doctorPriceHint"
                android:textAlignment="viewEnd"
                android:textColor="@color/hint_text" />

            <TextView
                android:id="@+id/doctorFragmentPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:textAlignment="viewEnd"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/doctorFragmentRatingHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/doctorRatingHint"
                android:textAlignment="viewEnd"
                android:textColor="@color/hint_text" />

            <TextView
                android:id="@+id/doctorFragmentRating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:textAlignment="viewEnd"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>